Fix T40639: operators ignore win.cursor_warp()